deployments/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi-service
  namespace: api-dev
  labels:
    app: poi-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poi-service
  template:
    metadata:
      labels:
        app: poi-service
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: poi-service
        image: registryzjk6277.azurecr.io/tripinsights/poi:1.0
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: poi-service
spec:
  ports:
  - port: 80
  selector:
    app: poi-service
