deployments/trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-service
  labels:
    app: trips-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trips-service
  template:
    metadata:
      labels:
        app: trips-service
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: trips-service
        image: registryzjk6277.azurecr.io/tripinsights/trips:1.0
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: trips-service
spec:
  ports:
  - port: 6379
  selector:
    app: trips-service
