deployments/user-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java-service
  namespace: api-dev
  labels:
    app: user-java-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-java-service
  template:
    metadata:
      labels:
        app: user-java-service
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: user-java-service
        image: registryzjk6277.azurecr.io/tripinsights/user-java:1.0
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: user-java-service
  namespace: api-dev
spec:
  ports:
  - port: 80
  selector:
    app: user-java-service
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: user-java-ingress
  namespace: api-dev
  annotations:
   kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths: 
      - path: /api/user-java
        backend:
         serviceName: user-java-service
         servicePort: 80
