deployments/userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: api-dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: userprofile
        image: registryzjk6277.azurecr.io/tripinsights/userprofile:1.0
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: api-dev
spec:
  ports:
  - port: 80
  selector:
    app: userprofile
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: userprofile-ingress
  namespace: api-dev
  annotations:
   kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /api/user
        pathType: Prefix
        backend:
         serviceName: userprofile
         servicePort: 80
      - path: /api/docs/user
        backend:
         serviceName: userprofile
         servicePort: 80
